# electronic-shop

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
shop/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_remove_provider_contacts_provider_contact.py  0003_remove_contact_title_remove_provider_contact_and_more.py  0004_alter_contact_email.py  0005_provider_linked_url_remove_contact_provider_and_more.py  0006_remove_contact_provider_remove_product_provider_and_more.py  0007_remove_provider_contact_remove_provider_product_and_more.py  0008_remove_provider_contact_remove_provider_product_and_more.py  0009_remove_provider_product_product_provider.py  0010_alter_product_provider.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
